# kddcup2026-data-agents-starter-kit

./: .dockerignore  .gitignore  DOCKER_BUILD_GUIDE.md  DOCKER_SUBMISSION_GUIDE.md  Dockerfile  GIT_TUTORIAL.md  README.md  README.zh.md  docker的提交要求.md  evaluate.py  exec_command.txt  experience.md  filter_hard_tasks.py  git_command.md  improvement.md  memory.md  memory.zh.md  pyproject.toml
configs/: react_baseline.example.yaml  submission.yaml
score/: readme.txt
src/data_agent_baseline/: cli.py  config.py
src/data_agent_baseline/agents/: __init__.py  model.py  orchestrator.py  parser.py  prompt.py  react.py  runtime.py  subagent.py  verification_agent.py
src/data_agent_baseline/benchmark/: __init__.py  dataset.py  schema.py
src/data_agent_baseline/run/: __init__.py  runner.py
src/data_agent_baseline/tools/: __init__.py  filesystem.py  math_calc.py  python_exec.py  registry.py  sqlite.py
task_analyze/: architecture_improvements.md  prompt_optimization_report.md  sql_fix_stability_analysis.md  task_169_analysis.md
